--- a/config.json.sample
+++ b/config.json.sample
@@ -4,5 +4,6 @@
   "password": "xxxxxxxxxxxxxxxxxx",
   "device_id": "ECYEOKVPLG",
   "room_id": "!FYCmBSkCRUNvZDBaDQ:matrix.qqs.tw",
-  "api_key": "xxxxxxxxxxxxxxxxxxxxxxxx"
+  "api_key": "xxxxxxxxxxxxxxxxxxxxxxxx",
+  "bing_api_endpoint": ""
 }
