--- a/compose.yaml
+++ b/compose.yaml
@@ -8,6 +8,8 @@ services:
     #   dockerfile: ./Dockerfile
     volumes:
       - ./config.json:/app/config.json
+      # use touch to create an empty file bot, for persist database only
+      - ./bot:/app/bot
     networks:
       - matrix_network
   # api:
