Support login via access_token

--- a/config.json.sample
+++ b/config.json.sample
@@ -5,5 +5,5 @@
   "device_id": "ECYEOKVPLG",
   "room_id": "!FYCmBSkCRUNvZDBaDQ:matrix.qqs.tw",
   "api_key": "xxxxxxxxxxxxxxxxxxxxxxxx",
-  "bing_api_endpoint": ""
+  "access_token": "xxxxxxx"
 }
