--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,9 @@ MANIFEST
 bot
 bot.log
 
+# image generation folder
+images/
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
