--- a/requirements.txt
+++ b/requirements.txt
@@ -24,10 +24,12 @@ lxml==4.9.2
 matrix-nio==0.20.1
 multidict==6.0.4
 peewee==3.16.0
+Pillow==9.4.0
 pycparser==2.21
 pycryptodome==3.17
 pycryptodomex==3.17
 pyrsistent==0.19.3
+python-magic==0.4.27
 python-olm==3.1.3
 python-socks==2.1.1
 regex==2022.10.31
