--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,12 @@ async-timeout==4.0.2
 atomicwrites==1.4.1
 attrs==22.2.0
 blobfile==2.0.1
-cachetools==5.3.0
+cachetools==4.2.4
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.1.0
-filelock==3.10.7
+cryptography==40.0.1
+filelock==3.11.0
 frozenlist==1.3.3
 future==0.18.3
 h11==0.14.0
@@ -24,7 +25,8 @@ idna==3.4
 jsonschema==4.17.3
 Logbook==1.5.3
 lxml==4.9.2
-matrix-nio[e2e]
+Markdown==3.4.3
+matrix-nio[e2e]==0.20.2
 multidict==6.0.4
 peewee==3.16.0
 Pillow==9.5.0
@@ -32,15 +34,18 @@ pycparser==2.21
 pycryptodome==3.17
 pycryptodomex==3.17
 pyrsistent==0.19.3
+python-cryptography-fernet-wrapper==1.0.4
 python-magic==0.4.27
+python-olm==3.1.3
 python-socks==2.2.0
 regex==2023.3.23
 requests==2.28.2
 rfc3986==1.5.0
+six==1.16.0
 sniffio==1.3.0
+tiktoken==0.3.3
+toml==0.10.2
 unpaddedbase64==2.1.0
 urllib3==1.26.15
 wcwidth==0.2.6
 yarl==1.8.2
-python-olm >= '3.1.0'
-tiktoken==0.3.3
