feat: support reading config from environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+# Please remove the option that is blank
 HOMESERVER="https://matrix.xxxxxx.xxxx" # required
 USER_ID="@lullap:xxxxxxxxxxxxx.xxx" # required
 PASSWORD="xxxxxxxxxxxxxxx" # required
