improve config sample

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # Please remove the option that is blank
 HOMESERVER="https://matrix.xxxxxx.xxxx" # required
 USER_ID="@lullap:xxxxxxxxxxxxx.xxx" # required
-PASSWORD="xxxxxxxxxxxxxxx" # required
+PASSWORD="xxxxxxxxxxxxxxx" # Optional
 DEVICE_ID="xxxxxxxxxxxxxx" # required
-ROOM_ID="!FYCmBSkCRUXXXXXXXXX:matrix.XXX.XXX" # Optional, if the property is blank, bot will work on the room it is in (Unencrypted room only as for now)
+ROOM_ID="!FYCmBSkCRUXXXXXXXXX:matrix.XXX.XXX" # Optional, if not set, bot will work on the room it is in
 OPENAI_API_KEY="xxxxxxxxxxxxxxxxx" # Optional, for !chat and !gpt command
 BING_API_ENDPOINT="xxxxxxxxxxxxxxx" # Optional, for !bing command
 ACCESS_TOKEN="xxxxxxxxxxxxxxxxxxxxx" # Optional, use user_id and password is recommended
