--- a/config.json.sample
+++ b/config.json.sample
@@ -5,5 +5,8 @@
   "device_id": "ECYEOKVPLG",
   "room_id": "!FYCmBSkCRUNvZDBaDQ:matrix.qqs.tw",
   "api_key": "xxxxxxxxxxxxxxxxxxxxxxxx",
-  "access_token": "xxxxxxx"
+  "bing_api_endpoint": "http://api:3000/conversation",
+  "jailbreakEnabled": true,
+  "access_token": "xxxxxxx",
+  "bing_auth_cookie": "xxxxxxxxxxx"
 }
