--- a/config.json.sample
+++ b/config.json.sample
@@ -8,6 +8,7 @@
   "bing_api_endpoint": "http://api:3000/conversation",
   "jailbreakEnabled": true,
   "access_token": "xxxxxxx",
+  "bard_token": "xxxxxxx",
   "bing_auth_cookie": "xxxxxxxxxxx",
   "markdown_formatted": true
 }
