--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,5 @@ BARD_TOKEN="xxxxxxxxxxxxxxxxxxxx", # Optional, for !bard command
 JAILBREAKENABLED="true" # Optional
 BING_AUTH_COOKIE="xxxxxxxxxxxxxxxxxxx" # _U cookie, Optional, for Bing Image Creator
 MARKDOWN_FORMATTED="true" # Optional
+IMPORT_KEYS_PATH="element-keys.txt" # Optional
+IMPORT_KEYS_PASSWORD="xxxxxxx" # Optional
