feat: BingImageCreator output four images

--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,6 @@ BARD_TOKEN="xxxxxxxxxxxxxxxxxxxx", # Optional, for !bard command
 JAILBREAKENABLED="true" # Optional
 BING_AUTH_COOKIE="xxxxxxxxxxxxxxxxxxx" # _U cookie, Optional, for Bing Image Creator
 MARKDOWN_FORMATTED="true" # Optional
+OUTPUT_FOUR_IMAGES="true" # Optional
 IMPORT_KEYS_PATH="element-keys.txt" # Optional
 IMPORT_KEYS_PASSWORD="xxxxxxx" # Optional
