feat: support langchain powered by flowise
Bump requests from 2.28.2 to 2.31.0

Bumps [requests](https://github.com/psf/requests) from 2.28.2 to 2.31.0.
- [Release notes](https://github.com/psf/requests/releases)
- [Changelog](https://github.com/psf/requests/blob/main/HISTORY.md)
- [Commits](https://github.com/psf/requests/compare/v2.28.2...v2.31.0)

---
updated-dependencies:
- dependency-name: requests
  dependency-type: direct:production
...

Signed-off-by: dependabot[bot] <support@github.com>

--- a/config.json.sample
+++ b/config.json.sample
@@ -13,5 +13,7 @@
   "markdown_formatted": true,
   "output_four_images": true,
   "import_keys_path": "element-keys.txt",
-  "import_keys_password": "xxxxxxxxx"
+  "import_keys_password": "xxxxxxxxx",
+  "flowise_api_url": "http://localhost:3000/api/v1/prediction/6deb3c89-45bf-4ac4-a0b0-b2d5ef249d21",
+  "flowise_api_key": "U3pe0bbVDWOyoJtsDzFJjRvHKTP3FRjODwuM78exC3A="
 }
