--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,5 @@ MARKDOWN_FORMATTED="true" # Optional
 OUTPUT_FOUR_IMAGES="true" # Optional
 IMPORT_KEYS_PATH="element-keys.txt" # Optional
 IMPORT_KEYS_PASSWORD="xxxxxxx" # Optional
+FLOWISE_API_URL="http://localhost:3000/api/v1/prediction/xxxx" # Optional
+FLOWISE_API_KEY="xxxxxxxxxxxxxxxxxxxxxxx" # Optional
