feat: Support chatting with chatGPT web

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,5 @@ IMPORT_KEYS_PATH="element-keys.txt" # Optional
 IMPORT_KEYS_PASSWORD="xxxxxxx" # Optional
 FLOWISE_API_URL="http://localhost:3000/api/v1/prediction/xxxx" # Optional
 FLOWISE_API_KEY="xxxxxxxxxxxxxxxxxxxxxxx" # Optional
+PANDORA_API_ENDPOINT="http://pandora:8008" # Optional
+PANDORA_API_MODEL="text-davinci-002-render-sha-mobile" # Optional
