--- a/config.json.sample
+++ b/config.json.sample
@@ -15,5 +15,7 @@
   "import_keys_path": "element-keys.txt",
   "import_keys_password": "xxxxxxxxx",
   "flowise_api_url": "http://localhost:3000/api/v1/prediction/6deb3c89-45bf-4ac4-a0b0-b2d5ef249d21",
-  "flowise_api_key": "U3pe0bbVDWOyoJtsDzFJjRvHKTP3FRjODwuM78exC3A="
+  "flowise_api_key": "U3pe0bbVDWOyoJtsDzFJjRvHKTP3FRjODwuM78exC3A=",
+  "pandora_api_endpoint": "http://127.0.0.1:8008",
+  "pandora_api_model": "text-davinci-002-render-sha-mobile"
 }
