--- a/.env.example
+++ b/.env.example
@@ -5,16 +5,16 @@ PASSWORD="xxxxxxxxxxxxxxx" # Optional
 DEVICE_ID="xxxxxxxxxxxxxx" # required
 ROOM_ID="!FYCmBSkCRUXXXXXXXXX:matrix.XXX.XXX" # Optional, if not set, bot will work on the room it is in
 OPENAI_API_KEY="xxxxxxxxxxxxxxxxx" # Optional, for !chat and !gpt command
-BING_API_ENDPOINT="xxxxxxxxxxxxxxx" # Optional, for !bing command
+API_ENDPOINT="xxxxxxxxxxxxxxx" # Optional, for !chat and !bing command
 ACCESS_TOKEN="xxxxxxxxxxxxxxxxxxxxx" # Optional, use user_id and password is recommended
 BARD_TOKEN="xxxxxxxxxxxxxxxxxxxx", # Optional, for !bard command
-JAILBREAKENABLED="true" # Optional
 BING_AUTH_COOKIE="xxxxxxxxxxxxxxxxxxx" # _U cookie, Optional, for Bing Image Creator
 MARKDOWN_FORMATTED="true" # Optional
 OUTPUT_FOUR_IMAGES="true" # Optional
-IMPORT_KEYS_PATH="element-keys.txt" # Optional
+IMPORT_KEYS_PATH="element-keys.txt" # Optional, used for E2EE Room
 IMPORT_KEYS_PASSWORD="xxxxxxx" # Optional
 FLOWISE_API_URL="http://localhost:3000/api/v1/prediction/xxxx" # Optional
 FLOWISE_API_KEY="xxxxxxxxxxxxxxxxxxxxxxx" # Optional
-PANDORA_API_ENDPOINT="http://pandora:8008" # Optional
+PANDORA_API_ENDPOINT="http://pandora:8008" # Optional, for !talk, !goon command
 PANDORA_API_MODEL="text-davinci-002-render-sha-mobile" # Optional
+TEMPERATURE="0.8" # Optional
