--- a/compose.yaml
+++ b/compose.yaml
@@ -17,17 +17,18 @@ services:
       # - ./element-keys.txt:/app/element-keys.txt
     networks:
       - matrix_network
-  # api:
-  # # bing api
-  #   image: hibobmaster/node-chatgpt-api:latest
-  #   container_name: node-chatgpt-api
-  #   restart: unless-stopped
-  #   volumes:
-  #     - ./settings.js:/var/chatgpt-api/settings.js
-  #   networks:
-  #     - matrix_network
+  api:
+    # ChatGPT and Bing API
+    image: hibobmaster/node-chatgpt-api:latest
+    container_name: node-chatgpt-api
+    restart: unless-stopped
+    volumes:
+      - ./settings.js:/app/settings.js
+    networks:
+      - matrix_network
 
   # pandora:
+  #   # ChatGPT Web
   #   image: pengzhile/pandora
   #   container_name: pandora
   #   restart: unless-stopped
