--- a/config.json.sample
+++ b/config.json.sample
@@ -1,21 +1,7 @@
 {
-  "homeserver": "https://matrix.qqs.tw",
+  "homeserver": "https://matrix-client.matrix.org",
   "user_id": "@lullap:xxxxx.org",
   "password": "xxxxxxxxxxxxxxxxxx",
-  "device_id": "ECYEOKVPLG",
-  "room_id": "!FYCmBSkCRUNvZDBaDQ:matrix.qqs.tw",
-  "openai_api_key": "xxxxxxxxxxxxxxxxxxxxxxxx",
-  "api_endpoint": "http://api:3000/conversation",
-  "access_token": "xxxxxxx",
-  "bard_token": "xxxxxxx",
-  "bing_auth_cookie": "xxxxxxxxxxx",
-  "markdown_formatted": true,
-  "output_four_images": true,
-  "import_keys_path": "element-keys.txt",
-  "import_keys_password": "xxxxxxxxx",
-  "flowise_api_url": "http://localhost:3000/api/v1/prediction/6deb3c89-45bf-4ac4-a0b0-b2d5ef249d21",
-  "flowise_api_key": "U3pe0bbVDWOyoJtsDzFJjRvHKTP3FRjODwuM78exC3A=",
-  "pandora_api_endpoint": "http://127.0.0.1:8008",
-  "pandora_api_model": "text-davinci-002-render-sha-mobile",
-  "temperature": 0.8
+  "device_id": "MatrixChatGPTBot",
+  "openai_api_key": "xxxxxxxxxxxxxxxxxxxxxxxx"
 }
