fix and do some improvements

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 HOMESERVER="https://matrix-client.matrix.org" # required
 USER_ID="@lullap:xxxxxxxxxxxxx.xxx" # required
-PASSWORD="xxxxxxxxxxxxxxx" # Optional if you use access token
+PASSWORD="xxxxxxxxxxxxxxx" # required
 DEVICE_ID="MatrixChatGPTBot" # required
 ROOM_ID="!FYCmBSkCRUXXXXXXXXX:matrix.XXX.XXX" # Optional, if not set, bot will work on the room it is in
-OPENAI_API_KEY="xxxxxxxxxxxxxxxxx" # Optional, for !chat and !gpt command
+OPENAI_API_KEY="xxxxxxxxxxxxxxxxx" # Optional
