--- a/.full-env.example
+++ b/.full-env.example
@@ -1,6 +1,7 @@
 HOMESERVER="https://matrix-client.matrix.org"
 USER_ID="@lullap:xxxxxxxxxxxxx.xxx"
 PASSWORD="xxxxxxxxxxxxxxx"
+ACCESS_TOKEN="xxxxxxxxxxx"
 DEVICE_ID="xxxxxxxxxxxxxx"
 ROOM_ID="!FYCmBSkCRUXXXXXXXXX:matrix.XXX.XXX"
 IMPORT_KEYS_PATH="element-keys.txt"
