Fix localai v2.0+ image generation

--- a/.full-env.example
+++ b/.full-env.example
@@ -18,5 +18,7 @@ SYSTEM_PROMPT="You are ChatGPT,  a large language model trained by OpenAI. Respo
 TEMPERATURE=0.8
 LC_ADMIN="@admin:xxxxxx.xxx,@admin2:xxxxxx.xxx"
 IMAGE_GENERATION_ENDPOINT="http://127.0.0.1:7860/sdapi/v1/txt2img"
-IMAGE_GENERATION_BACKEND="sdwui" # openai or sdwui
+IMAGE_GENERATION_BACKEND="sdwui" # openai or sdwui or localai
+IMAGE_GENERATION_SIZE="512x512"
+IMAGE_FORMAT="webp"
 TIMEOUT=120.0
