feat: Expose more stable diffusion webui api parameters

--- a/.full-env.example
+++ b/.full-env.example
@@ -21,4 +21,7 @@ IMAGE_GENERATION_ENDPOINT="http://127.0.0.1:7860/sdapi/v1/txt2img"
 IMAGE_GENERATION_BACKEND="sdwui" # openai or sdwui or localai
 IMAGE_GENERATION_SIZE="512x512"
 IMAGE_FORMAT="webp"
+SDWUI_STEPS=20
+SDWUI_SAMPLER_NAME="Euler a"
+SDWUI_CFG_SCALE=7
 TIMEOUT=120.0
