--- a/full-config.json.example
+++ b/full-config.json.example
@@ -25,5 +25,7 @@
     "sdwui_sampler_name": "Euler a",
     "sdwui_cfg_scale": 7,
     "image_format": "webp",
+    "gpt_vision_api_endpoint": "https://api.openai.com/v1/chat/completions",
+    "gpt_vision_model": "gpt-4-vision-preview",
     "timeout": 120.0
 }
