:sparkles: Support several whitelist room_id

--- a/.full-env.example
+++ b/.full-env.example
@@ -3,7 +3,7 @@ USER_ID="@lullap:xxxxxxxxxxxxx.xxx"
 PASSWORD="xxxxxxxxxxxxxxx"
 ACCESS_TOKEN="xxxxxxxxxxx"
 DEVICE_ID="xxxxxxxxxxxxxx"
-ROOM_ID="!FYCmBSkCRUXXXXXXXXX:matrix.XXX.XXX"
+ROOM_ID="!aaaaaaa:XXX.XXX,!bbbbbb:XXX.XXX"
 IMPORT_KEYS_PATH="element-keys.txt"
 IMPORT_KEYS_PASSWORD="xxxxxxxxxxxx"
 OPENAI_API_KEY="xxxxxxxxxxxxxxxxx"
