--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -6,12 +6,12 @@ on:
     types: [published]
 
 jobs:
-  push_to_registry:
-    name: Push Docker image to registry
+  push_to_registry_amd64:
+    name: Push AMD64 Docker image
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -32,11 +32,8 @@ jobs:
         with:
           images: hibobmaster/matrixchatgptbot
           tags: |
-            type=raw,value=latest
-            type=ref,event=tag
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+            type=raw,value=latest-amd64
+            type=ref,event=tag,suffix=-amd64
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -45,8 +42,9 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
+          provenance: false
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
@@ -58,17 +56,139 @@ jobs:
         with:
           images: ghcr.io/hibobmaster/matrixchatgptbot
           tags: |
-            type=raw,value=latest
-            type=ref,event=tag
-            type=sha,format=long
+            type=raw,value=latest-amd64
+            type=ref,event=tag,suffix=-amd64
+            type=sha,format=long,suffix=-amd64
 
       - name: Build and push Docker image(ghcr)
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
+          provenance: false
           tags: ${{ steps.meta2.outputs.tags }}
           labels: ${{ steps.meta2.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+  push_to_registry_arm64:
+    name: Push ARM64 Docker image
+    runs-on: ubuntu-24.04-arm
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v4
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Docker metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: hibobmaster/matrixchatgptbot
+          tags: |
+            type=raw,value=latest-arm64
+            type=ref,event=tag,suffix=-arm64
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push Docker image(dockerhub)
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          platforms: linux/arm64
+          push: true
+          provenance: false
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Docker metadata(ghcr)
+        id: meta2
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/hibobmaster/matrixchatgptbot
+          tags: |
+            type=raw,value=latest-arm64
+            type=ref,event=tag,suffix=-arm64
+            type=sha,format=long,suffix=-arm64
+
+      - name: Build and push Docker image(ghcr)
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          platforms: linux/arm64
+          push: true
+          provenance: false
+          tags: ${{ steps.meta2.outputs.tags }}
+          labels: ${{ steps.meta2.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  create_manifests:
+    name: Create and push multi-arch manifests
+    needs: [push_to_registry_amd64, push_to_registry_arm64]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Setup Docker CLI for multi-platform builds
+        run: |
+          docker version
+          docker buildx version
+
+      - name: Create and push Docker Hub latest manifest
+        run: |
+          docker manifest create hibobmaster/matrixchatgptbot:latest --amend \
+            hibobmaster/matrixchatgptbot:latest-amd64 \
+            hibobmaster/matrixchatgptbot:latest-arm64
+          docker manifest push hibobmaster/matrixchatgptbot:latest
+
+      - name: Create and push Docker Hub version tag manifest
+        if: github.event_name == 'release'
+        run: |
+          VERSION_TAG="${{ github.ref_name }}"
+          docker manifest create hibobmaster/matrixchatgptbot:${VERSION_TAG} --amend \
+            hibobmaster/matrixchatgptbot:${VERSION_TAG}-amd64 \
+            hibobmaster/matrixchatgptbot:${VERSION_TAG}-arm64
+          docker manifest push hibobmaster/matrixchatgptbot:${VERSION_TAG}
+
+      - name: Create and push GHCR latest manifest
+        run: |
+          docker manifest create ghcr.io/hibobmaster/matrixchatgptbot:latest --amend \
+            ghcr.io/hibobmaster/matrixchatgptbot:latest-amd64 \
+            ghcr.io/hibobmaster/matrixchatgptbot:latest-arm64
+          docker manifest push ghcr.io/hibobmaster/matrixchatgptbot:latest
+
+      - name: Create and push GHCR version tag manifest
+        if: github.event_name == 'release'
+        run: |
+          VERSION_TAG="${{ github.ref_name }}"
+          docker manifest create ghcr.io/hibobmaster/matrixchatgptbot:${VERSION_TAG} --amend \
+            ghcr.io/hibobmaster/matrixchatgptbot:${VERSION_TAG}-amd64 \
+            ghcr.io/hibobmaster/matrixchatgptbot:${VERSION_TAG}-arm64
+          docker manifest push ghcr.io/hibobmaster/matrixchatgptbot:${VERSION_TAG}
